# focal-interpreter

./: CMakeLists.txt  Makefile  README.md  main.cpp
_build/: circle_if.txt  circle_if.txt_table_name  comment.txt  comment.txt_table_name  compiler  do-result.txt  upd_printing_scanner_processed.txt  vars-result.txt  vars-result.txt_table_name
doc/recognizer-parser/: recognizer_parser.rai  recognizer_parser.tex
doc/syntax-focal/: syntax.rai  syntax.tex
errors/: error.cpp  error.h
name_table/: app_types.cpp  app_types.h  name_table.cpp  name_table.h  name_table_ext.h
parser/: parser.cpp  parser.h  parser_ext.h
scanner/: Makefile  main.cpp  scanner.cpp  scanner_data.h  scanner_ext.h  scanner_local.h  scanner_type.h  testout.cpp
scanner/examples_results/: printing_scanner_processed.txt  standart_funcs_scanner_processed.txt  vars_scanner_processed.txt
tests/: circle_if.foc  comment.foc  directive_mode.foc  do.foc  fchr.foc  for.foc  go.foc  if.foc  if_inside_do.foc  printing.foc  quicksort.foc  quit.foc  standart_funcs.foc  subroutine.foc  test.foc  type.foc  vars.foc
